--- a/index.html
+++ b/index.html
@@ -123,17 +123,17 @@
     <div class="calculator">
       <h1>Mileage Estimator</h1>
       <p>Enter the total distance travelled (in km):
-        <input type="text" id="dis">
+        <input type="number" id="dis">
         <br><span id="dis_error"></span>
       </p>
 
       <p>Enter the amount of fuel required (in Rs.):
-        <input type="text" id="fuel">
+        <input type="number" id="fuel">
         <br><span id="fuel_error"></span>
       </p>
 
       <p>Enter the Fuel rate:
-        <input type="text" id="rate">
+        <input type="number" id="rate">
         <br><span id="rate_error"></span>
       </p>
 
@@ -145,17 +145,17 @@
     <div class="calculator">
       <h1>Fuel Estimator</h1>
       <p>Enter the distance to travel (in km):
-        <input type="text" id="dist">
+        <input type="number" id="dist">
         <br><span id="dist_error"></span>
       </p>
 
       <p>Mileage of Vehicle:
-        <input type="text" id="mileage">
+        <input type="number" id="mileage">
         <br><span id="mileage_error"></span>
       </p>
 
       <p>Enter the Fuel rate:
-        <input type="text" id="rt">
+        <input type="number" id="rt">
         <br><span id="rt_error"></span>
       </p>
 
